# VoiceAgent

./: .dockerignore  .gitignore  COMPLETE_FIX_REPORT.md  FIX_SUMMARY.md  ISSUE_RESOLVED.md  Makefile  ORPHEUS_FIX_REPORT.md  README.md  RESTORE_ALL_REMAINING_FILES.py  WEB_SETUP.md  app.py  build.sh  docker-compose.yml  implementation_plan.md  init_platform.py  knowledge.md  main.py  pyproject.toml  requirements.txt  setup.sh  start_web.sh  test_menu.py  verify_setup.py  voiceagent.db
.claude/agents/: qa-playwright-agent.md
.github/workflows/: deploy.yml
agent_system/: __init__.py  agent_builder.py  text_agent.py  voice_agent_wrapper.py
backend/: .env.example  Dockerfile  README.md  agentic_forms_local.db  alembic.ini  build.sh  config.py  index.py  logging_config.py  main.py  pyproject.toml  requirements.txt  vercel.json
backend/routes/: __init__.py  api.py  websocket.py
backend/services/: __init__.py  voice_service.py
backend/src/voiceagent/agent/: __init__.py  voice_assistant_agent.py
backend/src/voiceagent/audio/: __init__.py  recorder.py
backend/src/voiceagent/config/: settings.py
backend/src/voiceagent/core/: __init__.py  voice_agent.py
backend/src/voiceagent/models/: __init__.py  groq_stt.py  groq_tts.py  orpheus_tts.py  voice_provider.py
backend/src/voiceagent/services/: __init__.py
backend/tests/: conftest.py  test_flow_engine.py  test_security.py  test_session_store.py  test_voice_sanitiser.py  test_voice_workflow_integration.py
backend/v1/: __init__.py  bootstrap.py  database.py  deps.py  models.py  schemas.py  security.py  session_store.py
backend/v1/migrations/: env.py
backend/v1/migrations/versions/: 38c208b7772f_add_agentic_form_fields.py  816e439b8f0f_initial_schema.py  c3f1a2b9d4e7_add_missing_schema_columns.py
backend/v1/routes/: __init__.py  auth.py  billing.py  forms.py  public.py
backend/v1/services/: __init__.py  agent_engine.py  compliance_service.py  email_service.py  export_service.py  file_service.py  flow_engine.py  form_generator.py  insights_service.py  sso_service.py  voice_integration.py  voice_workflow.py  webhook_service.py
conversation/: __init__.py  data_collector.py  session_manager.py
database/: __init__.py  connection.py  models.py  operations.py
examples/: __init__.py  custom_agent_example.py  programmatic_usage.py  simple_usage.py
export/: __init__.py  excel_exporter.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
helm/talkforms/: Chart.yaml  values.yaml
pages/: 1_🏪_Agent_Marketplace.py  2_✨_Create_Agent.py  3_💬_Chat_Interface.py  4_📊_View_Data.py
utils/: __init__.py  streamlit_helpers.py
(+96 files in other folders)
