[project]
name = "voiceagent"
version = "0.1.0"
description = "Production-grade voice agent using OpenAI Agents SDK and Groq models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-agents[voice]>=0.1.0",
    "groq>=0.11.0",
    "litellm>=1.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "gtts>=2.5.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

