[project]
name = "voiceagent-backend"
version = "1.0.0"
description = "Voice Agent API - FastAPI backend with WebSocket support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web stack
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    # Voiceagent runtime (so backend venv is self-contained)
    "openai-agents[voice]>=0.1.0",
    "groq>=0.11.0",
    "litellm>=1.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "gtts>=2.5.0",
    "scipy>=1.10.0",
    "snac>=1.2.1",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
package = false
